Added Basics of User Cookie
Added Basics of User Cookie

--- a/public/project/views/user/templates/profile.view.client.html
+++ b/public/project/views/user/templates/profile.view.client.html
@@ -35,8 +35,11 @@
                 </div>
             </div>
             <div class="row">
+            <div class="col-xs-12">
+                <div ng-include="'views/user/templates/followed-content-list.view.client.html'"></div>
+            </div>
                 <div class="col-xs-12">
-                    <div ng-include="'views/user/templates/followed-content-list.view.client.html'"></div>
+                    <div ng-include="'views/user/templates/curriculum-list.view.client.html'"></div>
                 </div>
             </div>
         </div>
