Fixed Course Addition
Evidently MD5s are too large to be ObjectIds

--- a/public/project/views/content/templates/course-search.view.client.html
+++ b/public/project/views/content/templates/course-search.view.client.html
@@ -1,11 +1,24 @@
+<nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#!/user/{{model.userId}}">
+                <span class="glyphicon glyphicon glyphicon-menu-left"></span>
+            </a>
+            <a class="navbar-brand">
+                Course Query
+            </a>
+        </div>
+    </div>
+</nav>
+
 <div class="container-fluid ">
     <div id="courseSearchBar" class="input-group">
         <input ng-model="searchText"
                type="text"
                class="form-control"
-               placeholder="Search Content">
+               placeholder="Search Course">
         <span class="input-group-btn">
-            <a ng-click="model.searchContent(searchText)"
+            <a ng-click="model.searchCourses(searchText)"
                class="btn btn-default"
                type="button">
                 <span class="glyphicon glyphicon-search"></span>
@@ -19,18 +32,25 @@
             <ul class="list-group">
                 <li class="list-group-item active">
                     <div class="row">
-                        <div class="col-md-5 col-sm-8 col-xs-10">Course</div>
+                        <div class="col-xs-1">
+                        </div>
+                        <div class="col-md-4 col-sm-7 col-xs-9">Course</div>
                         <div class="col-sm-3 visible-sm visible-md visible-lg">Institution</div>
                         <div class="col-md-3 visible-lg visible-md">Author</div>
                     </div>
                 </li>
                 <li ng-repeat="course in model.courses" class="list-group-item">
                     <div class="row">
-                        <div class="col-md-5 col-sm-8 col-xs-10"><a href="#">{{course.title}}</a></div>
+                        <div class="col-xs-1">
+                            <a ng-click="model.addCourseToUser(course, model.userId)">
+                                <span class="glyphicon glyphicon-plus pull-left"></span>
+                            </a>
+                        </div>
+                        <div class="col-md-4 col-sm-7 col-xs-9"><a href="#">{{course.title}}</a></div>
                         <div class="col-sm-3 visible-sm visible-md visible-lg">{{course.source}}</div>
                         <div class="col-md-3 visible-lg visible-md">{{course.author}}</div>
                         <div class="col-xs-1">
-                            <a ng-click="model.getCourseDetails(course.id)"><span class="glyphicon glyphicon-chevron-right pull-right"></span></a>
+                            <a ng-click="model.getCourseDetails(course.id)"><span class="glyphicon glyphicon-chevron-right pull-left"></span></a>
                         </div>
                     </div>
                 </li>
@@ -41,7 +61,6 @@
             <h2>Institution: {{model.selectedCourse.provider_name}}</h2>
             <h2>Author(s): {{model.selectedCourse.author}}</h2>
             <span>{{model.selectedCourse.description}}</span>
-
         </div>
     </div>
 
