--- a/public/project/views/user/templates/followed-content-list.view.client.html
+++ b/public/project/views/user/templates/followed-content-list.view.client.html
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-xs-8">Content ID</div>
             <div class="col-xs-4">
-                <a href="#!/user/{{model.userId}}/content/search" class="wd-iconLink">
+                <a href="#!/user/{{model.userId}}/course/search" class="wd-iconLink">
                     <span class="glyphicon glyphicon-plus pull-right"></span>
                 </a>
             </div>
