--- a/public/project/views/curriculum/templates/curriculum-list.view.client.html
+++ b/public/project/views/curriculum/templates/curriculum-list.view.client.html
@@ -10,9 +10,9 @@
             </div>
         </div>
     </li>
-    <li ng-repeat="content in model.user.content" class="list-group-item">
+    <li ng-repeat="curriculum in model.curriculum" class="list-group-item">
         <div class="row">
-            <div class="col-xs-12"><a href="#!/user/{{model.userId}}/content/{{content}}">{{content}}</a></div>
+            <div class="col-xs-12"><a href="#!/user/{{model.userId}}/content/{{curriculum._id}}">{{curriculum.name}}</a></div>
         </div>
     </li>
 </ul>
