Temp Commit for Curriculum Edit Page
Temp Commit for Curriculum Edit Page

--- a/public/project/views/curriculum/templates/curriculum-list.view.client.html
+++ b/public/project/views/curriculum/templates/curriculum-list.view.client.html
@@ -12,7 +12,7 @@
     </li>
     <li ng-repeat="curriculum in model.curriculum" class="list-group-item">
         <div class="row">
-            <div class="col-xs-12"><a href="#!/user/{{model.userId}}/content/{{curriculum._id}}">{{curriculum.name}}</a></div>
+            <div class="col-xs-12"><a href="#!/curriculum/{{curriculum._id}}/edit">{{curriculum.name}}</a></div>
         </div>
     </li>
 </ul>
