--- a/public/project/views/curriculum/templates/curriculum-new.view.client.html
+++ b/public/project/views/curriculum/templates/curriculum-new.view.client.html
@@ -5,7 +5,7 @@
                 <span class="glyphicon glyphicon glyphicon-menu-left"></span>
             </a>
             <a class="navbar-brand">
-                Course Query
+                New Curriculum
             </a>
         </div>
     </div>
