--- a/public/project/views/curriculum/templates/curriculum-edit.view.client.html
+++ b/public/project/views/curriculum/templates/curriculum-edit.view.client.html
@@ -1,20 +1,12 @@
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand"
-               href="#!/website">
+            <a class="navbar-brand" href="#!/user/{{model.userId}}">
                 <span class="glyphicon glyphicon glyphicon-menu-left"></span>
             </a>
             <a class="navbar-brand">
-                New Website
+                Curriculum Edit
             </a>
-            <p class="navbar-text pull-right">
-                <a ng-click="model.createWebsite(website)"
-                   class="navbar-link">
-          <span class="glyphicon glyphicon-ok">
-          </span>
-                </a>
-            </p>
         </div>
     </div>
 </nav>
@@ -29,39 +21,45 @@
                             <div class="col-md-5 col-sm-8 col-xs-10">Name</div>
                         </div>
                     </li>
-                    <li ng-repeat="website in model.websites" class="list-group-item">
+                    <li ng-repeat="curriculum in model.curriculumList" class="list-group-item">
                         <div class="row">
-                            <div class="col-xs-10"><a href="#!/user/{{model.userId}}/website/{{website._id}}/page">{{website.name}}</a></div>
-                            <div class="col-xs-2 "><a href="#!/user/{{model.userId}}/website/{{website._id}}"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
+                            <div class="col-xs-10">
+                                <a href="#!/user/{{model.userId}}/curriculum/{{curriculum._id}}/page">{{curriculum.name}}</a>
+                            </div>
+                            <div class="col-xs-2 ">
+                                <a href="#!/user/{{model.userId}}/curriculum/{{curriculum._id}}">
+                                    <span class="glyphicon glyphicon-cog pull-right"></span>
+                                </a>
+                            </div>
                         </div>
                     </li>
                 </ul>
             </div>
         </div>
-        <form name="newWebsiteForm" novalidate>
+        <form name="newCurriculumForm" novalidate>
             <div class="col-xs-12 col-md-8">
-                <h3 ng-show="newWebsiteForm.$submitted && newWebsiteForm.name.$invalid"
-                    class="alert alert-danger">Website name is required</h3>
+                <h3 ng-show="newCurriculumForm.$submitted && newCurriculumForm.name.$invalid"
+                    class="alert alert-danger">Curriculum name is required</h3>
                 <label for="name">Name</label>
                 <input id="name"
                        name="name"
-                       ng-model="website.name"
+                       ng-model="model.curriculumId"
                        class="form-control"
                        placeholder="cnn"
                        required>
                 <label for="description">Description</label>
                 <textarea id="description"
-                          ng-model="website.description"
+                          ng-model="curriculum.description"
                           class="form-control"
                           rows="5"
                           placeholder="news site"></textarea>
                 <input type="submit"
-                       value="Create"
-                       ng-click="model.createWebsite(website)"
+                       value="Update"
+                       ng-click="model.createCurriculum(curriculum)"
                        class="btn btn-block btn-success"/>
             </div>
         </form>
     </div>
 </div>
 
-<div ng-include="'views/common/footer.view.client.html'"></div>
+<!--<div ng-include="'views/common/footer.view.client.html'"></div>-->
