Populated Curriculum Edit Page
Populated Curriculum Edit Page

--- a/public/project/views/curriculum/templates/curriculum-edit.view.client.html
+++ b/public/project/views/curriculum/templates/curriculum-edit.view.client.html
@@ -43,13 +43,13 @@
                 <label for="name">Name</label>
                 <input id="name"
                        name="name"
-                       ng-model="model.curriculumId"
+                       ng-model="model.curriculum.name"
                        class="form-control"
                        placeholder="cnn"
                        required>
                 <label for="description">Description</label>
                 <textarea id="description"
-                          ng-model="curriculum.description"
+                          ng-model="model.curriculum.description"
                           class="form-control"
                           rows="5"
                           placeholder="news site"></textarea>
