--- a/public/project/views/curriculum/templates/curriculum-edit.view.client.html
+++ b/public/project/views/curriculum/templates/curriculum-edit.view.client.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#!/user/{{model.userId}}">
+            <a class="navbar-brand" href="#!/profile">
                 <span class="glyphicon glyphicon glyphicon-menu-left"></span>
             </a>
             <a class="navbar-brand">
@@ -36,8 +36,9 @@
                 </ul>
             </div>
         </div>
-        <form name="newCurriculumForm" novalidate>
-            <div class="col-xs-12 col-md-8">
+
+        <div class="col-xs-12 col-md-8">
+            <form name="newCurriculumForm" novalidate>
                 <h3 ng-show="newCurriculumForm.$submitted && newCurriculumForm.name.$invalid"
                     class="alert alert-danger">Curriculum name is required</h3>
                 <label for="name">Name</label>
@@ -57,8 +58,12 @@
                        value="Update"
                        ng-click="model.createCurriculum(curriculum)"
                        class="btn btn-block btn-success"/>
-            </div>
-        </form>
+            </form>
+            <h3>Curriculum Content</h3>
+            <div ng-include="'views/content/templates/content-list.view.client.html'"></div>
+        </div>
+
+
     </div>
 </div>
 
