--- a/public/project/views/user/templates/profile.view.client.html
+++ b/public/project/views/user/templates/profile.view.client.html
@@ -16,7 +16,7 @@
             <div ng-show="model.message"
                  class="alert alert-info">{{model.message}}</div>
         </div>
-        <div class="col-xs-6">
+        <div class="col-xs-12 col-md-6">
             <div ng-include="'views/user/templates/user-details.view.client.html'"></div>
             <a class="btn btn-success btn-block"
                ng-click="model.updateUser(model.user)">Update</a>
@@ -25,19 +25,20 @@
             <a class="btn btn-danger  btn-block"
                href="#!/login">Logout</a>
         </div>
-        <div class="col-xs-6">
+        <div class="col-xs-12 col-md-6">
             <div class="row">
-                <div class="col-xs-6">
+                <div class="col-xs-12 col-md-6">
                     <div ng-include="'views/user/templates/friend-list.view.client.html'"></div>
                 </div>
-                <div class="col-xs-6">
+                <div class="col-xs-12 col-md-6">
                     <div ng-include="'views/user/templates/follower-list.view.client.html'"></div>
                 </div>
             </div>
             <div class="row">
-            <div class="col-xs-12">
-                <div ng-include="'views/user/templates/followed-content-list.view.client.html'"></div>
-            </div>
+                <div class="col-xs-12">
+                    <h3>Completed Content</h3>
+                    <div ng-include="'views/content/templates/content-list.view.client.html'"></div>
+                </div>
                 <div class="col-xs-12">
                     <div ng-include="'views/curriculum/templates/curriculum-list.view.client.html'"></div>
                 </div>
