--- a/public/project/views/content/templates/content-list.view.client.html
+++ b/public/project/views/content/templates/content-list.view.client.html
@@ -1,8 +1,9 @@
 <ul class="list-group">
     <li class="list-group-item active">
         <div class="row">
-            <div class="col-xs-8">Content ID</div>
-            <div class="col-xs-4">
+            <div class="col-xs-11 col-sm-6">Content Name</div>
+            <div class=".hidden-xs-down col-sm-5">Organization</div>
+            <div class="col-xs-1">
                 <a ng-show="model.curriculumList"
                    href="#!/curriculum/{{model.curriculumId}}/course/search"
                    class="wd-iconLink">
@@ -21,14 +22,16 @@
         ng-repeat="content in model.user.contentList"
         class="list-group-item">
         <div class="row">
-            <div class="col-xs-12"><a href="#!/user/{{model.userId}}/content/{{content._id}}">{{content.name}}</a></div>
+            <div class="col-xs-12 col-sm-6"><a href="#!/user/{{model.userId}}/content/{{content._id}}">{{content.name}}</a></div>
+            <div class="col-xs-12 col-sm-6">{{content.organization}}</div>
         </div>
     </li>
-        <li ng-show="model.user"
-            ng-repeat="content in model.user.contentList"
-            class="list-group-item">
-            <div class="row">
-                <div class="col-xs-12"><a href="#!/user/{{model.userId}}/content/{{content._id}}">{{content.name}}</a></div>
-            </div>
-        </li>
+    <li ng-show="model.curriculumId"
+        ng-repeat="content in model.contentList"
+        class="list-group-item">
+        <div class="row">
+            <div class="col-xs-12 col-sm-6"><a href="#!/user/{{model.userId}}/content/{{content._id}}">{{content.name}}</a></div>
+            <div class="col-xs-12 col-sm-6">{{content.organization}}</div>
+        </div>
+    </li>
 </ul>
