--- a/public/project/views/user/templates/register.view.client.html
+++ b/public/project/views/user/templates/register.view.client.html
@@ -16,7 +16,7 @@
             class="form-control"
             placeholder="Select your user type"
             data-ng-options="userType for userType in model.userTypes"
-            data-ng-model="userType"></select>
+            data-ng-model="model.userType"></select>
     <label for="password">Password</label>
     <input id="password"
            ng-model="password"
@@ -29,7 +29,7 @@
            type="password"
            class="form-control"
            placeholder="verify password"/>
-    <a ng-click="model.register(username, password, password2, userType)"
+    <a ng-click="model.register(username, password, password2, model.userType)"
        class="btn btn-primary btn-block">Register</a>
     <a class="btn btn-danger  btn-block"
        href="#!/login">Cancel</a>
