--- a/public/project/views/curriculum/templates/curriculum-list.view.client.html
+++ b/public/project/views/curriculum/templates/curriculum-list.view.client.html
@@ -1,10 +1,15 @@
 <h3>Curriculum List</h3>
+
 <ul class="list-group">
     <li class="list-group-item active">
         <div class="row">
             <div class="col-xs-8">Curriculum ID</div>
-            <div class="col-xs-4">
-                <a href="#!/curriculum/new" class="wd-iconLink">
+            <div class="col-xs-4"
+                 ng-switch="model.user.userType">
+                <a ng-switch-when="student"href="#!/curriculum/search" class="wd-iconLink">
+                    <span class="glyphicon glyphicon-search pull-right"></span>
+                </a>
+                <a ng-switch-when="curator" href="#!/curriculum/new" class="wd-iconLink">
                     <span class="glyphicon glyphicon-plus pull-right"></span>
                 </a>
             </div>
@@ -14,7 +19,17 @@
         ng-repeat="curriculum in model.user.curriculumList"
         class="list-group-item">
         <div class="row">
-            <div class="col-xs-12"><a href="#!/curriculum/{{curriculum._id}}/edit">{{curriculum.name}}</a></div>
+            <div class="col-xs-11"><a href="#!/curriculum/{{curriculum._id}}/edit">{{curriculum.name}}</a></div>
+            <div class="col-xs-1">
+                <a ng-click="model.removeCurriculumFromStudent(curriculum)">
+                    <span class="glyphicon glyphicon-trash pull-right"></span>
+                </a>
+                <!--<a ng-show="model.user"-->
+                   <!--href="#!/user/{{model.userId}}/course/search"-->
+                   <!--class="wd-iconLink">-->
+                    <!--<span class="glyphicon glyphicon-plus pull-right"></span>-->
+                <!--</a>-->
+            </div>
         </div>
     </li>
 </ul>
