--- a/public/project/views/curriculum/templates/curriculum-new.view.client.html
+++ b/public/project/views/curriculum/templates/curriculum-new.view.client.html
@@ -21,12 +21,12 @@
                             <div class="col-md-5 col-sm-8 col-xs-10">Name</div>
                         </div>
                     </li>
-                    <!--<li ng-repeat="curriculum in model.curriculum" class="list-group-item">-->
-                        <!--<div class="row">-->
-                            <!--<div class="col-xs-10"><a href="#!/user/{{model.userId}}/curriculum/{{curriculum._id}}/page">{{curriculum.name}}</a></div>-->
-                            <!--<div class="col-xs-2 "><a href="#!/user/{{model.userId}}/curriculum/{{curriculum._id}}"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>-->
-                        <!--</div>-->
-                    <!--</li>-->
+                    <li ng-repeat="curriculum in model.curriculumList" class="list-group-item">
+                        <div class="row">
+                            <div class="col-xs-10"><a href="#!/curriculum/{{curriculum._id}}/edit">{{curriculum.name}}</a></div>
+                            <div class="col-xs-2 "><a href="#!/curriculum/{{curriculum._id}}/edit"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
