--- a/public/project/views/user/templates/profile.view.client.html
+++ b/public/project/views/user/templates/profile.view.client.html
@@ -35,7 +35,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-12">
+                <div class="col-xs-12"
+                ng-show="model.user.userType === 'student'">
                     <h3>Completed Content</h3>
                     <div ng-include="'views/content/templates/content-list.view.client.html'"></div>
                 </div>
