--- a/public/project/views/user/templates/friend-list.view.client.html
+++ b/public/project/views/user/templates/friend-list.view.client.html
@@ -4,15 +4,15 @@
         <div class="row">
             <div class="col-xs-8">Friend ID</div>
             <div class="col-xs-4">
-                <a href="#!/user/{{model.userId}}/users" class="wd-iconLink">
+                <a href="#!/users" class="wd-iconLink">
                     <span class="glyphicon glyphicon-plus pull-right"></span>
                 </a>
             </div>
         </div>
     </li>
-    <li ng-repeat="friend in model.user.friends" class="list-group-item">
+    <li ng-repeat="friend in model.user.friendList" class="list-group-item">
         <div class="row">
-            <div class="col-xs-12"><a href="#!/user/{{model.userId}}/friend/{{friend}}">{{friend}}</a></div>
+            <div class="col-xs-12"><a href="#!/user/{{friend._id}}">{{friend.username}}</a></div>
         </div>
     </li>
 </ul>
