--- a/public/project/views/user/templates/friend-profile.view.client.html
+++ b/public/project/views/user/templates/friend-profile.view.client.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#!/user/{{model.originalId}}">
+            <a class="navbar-brand" href="#!/profile">
                 <span class="glyphicon glyphicon glyphicon-menu-left"></span>
             </a>
             <a class="navbar-brand">
