--- a/public/project/views/content/templates/content-list.view.client.html
+++ b/public/project/views/content/templates/content-list.view.client.html
@@ -1,9 +1,9 @@
 <ul class="list-group">
     <li class="list-group-item active">
         <div class="row">
-            <div class="col-xs-11 col-sm-6">Content Name</div>
-            <div class=".hidden-xs-down col-sm-5">Organization</div>
-            <div class="col-xs-1">
+            <div class="col-xs-10 col-sm-6">Content Name</div>
+            <div class="visible-sm visible-md visible-lg col-sm-5">Organization</div>
+            <div class="col-xs-2 col-sm-1">
                 <a ng-show="model.curriculumList"
                    href="#!/curriculum/{{model.curriculumId}}/course/search"
                    class="wd-iconLink">
