--- a/public/project/views/user/templates/other-profile.view.client.html
+++ b/public/project/views/user/templates/other-profile.view.client.html
@@ -19,15 +19,27 @@
             <div ng-show="model.message"
                  class="alert alert-info">{{model.message}}</div>
         </div>
-        <div class="col-xs-6">
+        <div class="col-xs-12 col-md-6">
             <div ng-include="'views/user/templates/user-details.view.client.html'"></div>
         </div>
-        <div class="col-xs-6">
-            <div class="col-xs-6">
-                <div ng-include="'views/user/templates/friend-list.view.client.html'"></div>
+        <div class="col-xs-12 col-md-6">
+            <div class="row">
+                <div class="col-xs-12 col-md-6">
+                    <div ng-include="'views/user/templates/friend-list.view.client.html'"></div>
+                </div>
+                <div class="col-xs-12 col-md-6">
+                    <div ng-include="'views/user/templates/follower-list.view.client.html'"></div>
+                </div>
             </div>
-            <div class="col-xs-6">
-                <div ng-include="'views/user/templates/follower-list.view.client.html'"></div>
+            <div class="row">
+                <div class="col-xs-12"
+                     ng-show="model.user.userType === 'student'">
+                    <h3>Completed Content</h3>
+                    <div ng-include="'views/content/templates/content-list.view.client.html'"></div>
+                </div>
+                <div class="col-xs-12">
+                    <div ng-include="'views/curriculum/templates/curriculum-list.view.client.html'"></div>
+                </div>
             </div>
         </div>
     </div>
