--- a/public/project/views/content/templates/content-list.view.client.html
+++ b/public/project/views/content/templates/content-list.view.client.html
@@ -3,7 +3,8 @@
         <div class="row">
             <div class="col-xs-10 col-sm-6">Content Name</div>
             <div class="visible-sm visible-md visible-lg col-sm-5">Organization</div>
-            <div class="col-xs-2 col-sm-1">
+            <div ng-show="!model.originalId"
+                 class="col-xs-2 col-sm-1">
                 <a ng-show="model.curriculumList"
                    href="#!/curriculum/{{model.curriculumId}}/course/search"
                    class="wd-iconLink">
