--- a/public/project/views/curriculum/templates/curriculum-list.view.client.html
+++ b/public/project/views/curriculum/templates/curriculum-list.view.client.html
@@ -5,6 +5,7 @@
         <div class="row">
             <div class="col-xs-8">Curriculum ID</div>
             <div class="col-xs-4"
+                 ng-show="!model.originalId"
                  ng-switch="model.user.userType">
                 <a ng-switch-when="student"href="#!/curriculum/search" class="wd-iconLink">
                     <span class="glyphicon glyphicon-search pull-right"></span>
@@ -21,6 +22,7 @@
         <div class="row">
             <div class="col-xs-11"><a href="#!/curriculum/{{curriculum._id}}/edit">{{curriculum.name}}</a></div>
             <div class="col-xs-1"
+                 ng-show="!model.originalId"
                  ng-switch="model.user.userType">
                 <a ng-switch-when="student"
                    ng-click="model.removeCurriculumFromStudent(curriculum)">
