Added Curriculum Update
Added function to update curriculum info

--- a/public/project/views/content/templates/content-list.view.client.html
+++ b/public/project/views/content/templates/content-list.view.client.html
@@ -31,7 +31,7 @@
         ng-repeat="content in model.contentList"
         class="list-group-item">
         <div class="row">
-            <div class="col-xs-12 col-sm-6"><a href="#!/user/{{model.userId}}/content/{{content._id}}">{{content.name}}</a></div>
+            <div class="col-xs-12 col-sm-6">{{content.name}}</div>
             <div class="col-xs-12 col-sm-6">{{content.organization}}</div>
         </div>
     </li>
