--- a/public/project/views/curriculum/templates/curriculum-edit.view.client.html
+++ b/public/project/views/curriculum/templates/curriculum-edit.view.client.html
@@ -56,7 +56,7 @@
                           placeholder="news site"></textarea>
                 <input type="submit"
                        value="Update"
-                       ng-click="model.createCurriculum(curriculum)"
+                       ng-click="model.updateCurriculum(model.curriculum)"
                        class="btn btn-block btn-success"/>
             </form>
             <h3>Curriculum Content</h3>
