--- a/public/project/views/user/templates/guest-home.view.client.html
+++ b/public/project/views/user/templates/guest-home.view.client.html
@@ -16,13 +16,13 @@
 
         <div class="col-xs-12">
             <a class="btn btn-primary btn-block"
-               ng-click="model.updateUser(model.user)">Browser Users</a>
+               href="#!/guest/users">Browser Users</a>
             <a class="btn btn-primary btn-block"
-               ng-click="model.deleteUser(model.user)">Browse Curriculum</a>
+               href="#!/guest/curriculum">Browse Curriculum</a>
             <a class="btn btn-primary btn-block"
-               ng-click="model.deleteUser(model.user)">Search Courses</a>
+               href="#!/guest/course">Search Courses</a>
             <a class="btn btn-primary  btn-block"
-               href="#!/login">Register</a>
+               href="#!/register">Register</a>
         </div>
 
 </div>
