--- a/public/project/views/user/templates/other-profile.view.client.html
+++ b/public/project/views/user/templates/other-profile.view.client.html
@@ -1,7 +1,12 @@
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#!/profile">
+            <a ng-show="!model.guest"
+               class="navbar-brand" href="#!/profile">
+                <span class="glyphicon glyphicon glyphicon-menu-left"></span>
+            </a>
+            <a ng-show="model.guest"
+               class="navbar-brand" href="#!/guest">
                 <span class="glyphicon glyphicon glyphicon-menu-left"></span>
             </a>
             <a class="navbar-brand">
