--- a/public/project/views/user/templates/friend-list.view.client.html
+++ b/public/project/views/user/templates/friend-list.view.client.html
@@ -47,7 +47,7 @@
         </div>
         <div class="col-xs-4">
             <a class="btn btn-success btn-block"
-               ng-click="model.addFriend(model.newFriend)">Add</a>
+               ng-click="model.addFriend(model.newFriend._id)">Add</a>
         </div>
     </div>
 </div>
