--- a/public/project/views/user/templates/profile.view.client.html
+++ b/public/project/views/user/templates/profile.view.client.html
@@ -28,14 +28,19 @@
                         class="form-control"
                         placeholder="Select your user type"
                         data-ng-options="user.username for user in model.users"
-                        data-ng-model="model.user" ng-change="model.hippo(model.user._id)"></select>
+                        data-ng-model="model.adminUser" ng-change="model.setCurrentUser(model.adminUser)"></select>
             </div>
         </div>
         <div class="col-xs-12 col-md-6">
             <div ng-include="'views/user/templates/user-details.view.client.html'"></div>
-            <a class="btn btn-success btn-block"
+            <a ng-show="model.adminUser || !model.admin"
+               class="btn btn-success btn-block"
                ng-click="model.updateUser(model.user)">Update</a>
-            <a class="btn btn-danger btn-block"
+            <a ng-show="!model.adminUser && model.admin"
+               class="btn btn-success btn-block"
+               ng-click="model.createUser(model.user)">Create</a>
+            <a ng-show="model.adminUser || !model.admin"
+               class="btn btn-danger btn-block"
                ng-click="model.deleteUser(model.user)">Unregister</a>
             <a class="btn btn-danger  btn-block"
                href="#!/login">Logout</a>
