--- a/public/project/views/user/templates/user-details.view.client.html
+++ b/public/project/views/user/templates/user-details.view.client.html
@@ -5,18 +5,35 @@
                type="text"
                class="form-control"
                id="username"
-               placeholder="Username">
+               placeholder="Username"
+               required>
     </div>
 
-
+    <div class="form-group"
+         ng-show="model.admin && !model.adminUser">
+        <label for="password">Password</label>
+        <input ng-model="model.user.password"
+               type="text"
+               class="form-control"
+               id="password"
+               placeholder="Password"
+               required>
+    </div>
 
     <div class="form-group">
         <label for="userType">User Type</label>
-        <input ng-model="model.user.userType"
+        <input ng-show="!model.admin || model.adminUser"
+               ng-model="model.user.userType"
                type="text"
                class="form-control"
                id="userType"
                disabled>
+        <select id="userType"
+                ng-show="!model.adminUser && model.admin"
+                class="form-control"
+                placeholder="Select your user type"
+                data-ng-options="userType for userType in model.userTypes"
+                data-ng-model="model.userType"></select>
     </div>
 
     <div class="form-group">
