--- a/public/project/views/user/templates/login.view.client.html
+++ b/public/project/views/user/templates/login.view.client.html
@@ -21,6 +21,10 @@
        class="btn btn-primary btn-block wd-spacedField">
         Login
     </a>
+    <a href="/auth/google" class="btn btn-danger btn-block">
+        <span class="fa fa-google-plus"></span>
+        Google
+    </a>
     <a ng-click="model.guestBrowse()"
        class="btn btn-info btn-block">
         Browse as a Guest
